# rust-auto-gpt

./: .env.sample  .gitignore  Cargo.toml  README.md
src/: main.rs
src/ai_functions/: architect.rs  backend.rs  frontend.rs  managing.rs  mod.rs
src/apis/: call_request.rs  mod.rs
src/helpers/: command_line.rs  mod.rs  utils.rs
src/models/: mod.rs
src/models/agent_basic/: basic_agent.rs  basic_traits.rs  mod.rs
src/models/agents/: agent_architect.rs  agent_backend.rs  agent_frontend.rs  agent_frontend_comp.rs  agent_trait.rs  mod.rs
src/models/agents_manager/: managing_agent.rs  mod.rs
src/models/general/: llm.rs
src/templates/web_app/: package.json  tsconfig.json
src/templates/web_app/src/: App.tsx
src/templates/web_app/src/components/: Controller.tsx
src/templates/web_app/src/components/pages/: PageOne.tsx
src/templates/web_app/src/components/shared/: Logo.tsx  Navigation.tsx
src/templates/web_app/src/hooks/: useCall.tsx
src/templates/web_server/: Cargo.toml  database.json
src/templates/web_server/schema/: api_schema.json
src/templates/web_server/src/: code_template.rs  main.rs
